--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -16,3 +16,8 @@
 .*\\#$
 ^R/inst/prefielding-mockup/global.R$
 ^analysis/*$
+test.R
+printed_stm.pdf
+imm-prepared-corpus.RData
+imm-stm-models-v1.RData
+gadarian_stm_models.RData
