rbuildignore ignore readme img

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -21,3 +21,5 @@ printed_stm.pdf
 imm-prepared-corpus.RData
 imm-stm-models-v1.RData
 gadarian_stm_models.RData
+stmprinter_example_1.png
+stmprinter_example_2.png
