--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,10 @@ export(plot_semcoh)
 export(plot_semcoh_all)
 export(plot_thoughts)
 export(print_models)
+importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,data_frame)
+importFrom(dplyr,desc)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
